--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!--<link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">-->
   <!--<script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>-->
   <title>DS AngularJS App</title>
-  <link rel="stylesheet" href="/static/styles.css">
+  <link rel="stylesheet" href="/static/app.css">
 </head>
 <body ng-cloak>
   <ul class="menu">
