--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@
 
   <div>Angular seed app: v<span app-version></span></div>
   <script src="/static/app.js"></script>
+  <script>
+    // FIXME this should be automatically added into app.js via gulp for development enviroment
+    document.write('<script src="' + location.origin + ':35729/livereload.js"><'+'/script>')
+  </script>
 </body>
 </html>
