--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <script src="/static/app.js"></script>
   <script>
     // FIXME this should be automatically added into app.js via gulp for development enviroment
-    document.write('<script src="' + location.origin + ':35729/livereload.js"><'+'/script>')
+    document.write('<script src="//' + location.hostname + ':35729/livereload.js"><'+'/script>')
   </script>
 </body>
 </html>
