images, sprites examples

--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <!--<link rel="stylesheet" href="/static/bower_components/html5-boilerplate/css/normalize.css">-->
-  <!--<link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">-->
   <!--<script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>-->
   <title>DS AngularJS App</title>
   <link rel="stylesheet" href="/static/app.css">
 </head>
 <body ng-cloak>
+  <div class="sprites-example">
+    <span class="btn-add"></span>
+    <span class="btn-remove"></span>
+  </div>
   <ul class="menu">
     <li><a href="#/view1">view1</a></li>
     <li><a href="#/view2">view2</a></li>
