--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <span class="btn-remove"></span>
   </div>
   <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
+    <li><a href="#/state1">module 1</a></li>
+    <li><a href="#/state2">module 2</a></li>
+    <li><a href="#/does/not/exists">otherwise</a></li>
   </ul>
 
-  <div ng-view></div>
+  <div ui-view></div>
 
   <div>Angular seed app: v<span app-version></span></div>
   <script src="/static/app.js"></script>
