--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <ul class="menu">
     <li><a href="#/state1">module 1</a></li>
     <li><a href="#/state2">module 2</a></li>
+    <li><a href="#/state3">module 3</a></li>
     <li><a href="#/does/not/exists">otherwise</a></li>
   </ul>
 
