libsass; update package.json;

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>DS AngularJS App</title>
-  <link rel="stylesheet" href="/static/app.css">
+  <link rel="stylesheet" href="/static/app.css?<%=VERSION%>">
 </head>
 <body ng-cloak data-api-base-url="<%=API_BASE_URL%>">
   <div class="sprites-example">
