Updated Angular to 1.5.5 version and add component instead of directive

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <li><a href="#/does/not/exists">otherwise</a></li>
   </ul>
 
-  <div ui-view></div>
+  <div ui-view>Loading...</div>
 
   <script src="/static/vendor.js?<%=VERSION%>"></script>
   <script src="/static/templates.js?<%=VERSION%>"></script>
