--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>DS AngularJS App</title>
   <link rel="stylesheet" href="/static/app.css?<%=VERSION%>">
 </head>
-<body ng-cloak data-api-base-url="<%=API_BASE_URL%>">
+<body ng-cloak data-api-url="<%=API_URL%>">
   <div class="sprites-example">
     <span class="btn-add"></span>
     <span class="btn-remove"></span>
