--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,7 @@
     <meta charset="utf-8">
     <title>DS App</title>
   </head>
-  <body><%=process.env.API_URL%></body>
+  <body>
+    <button type="button" class="btn btn-primary">Primary</button>
+  </body>
 </html>
