--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>DS App</title>
   </head>
   <body>
+    <div id="root"></div>
     <button type="button" class="btn btn-primary">Primary</button>
   </body>
 </html>
