--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <base href="/">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>DS App</title>
+    <title><%=htmlWebpackPlugin.options.env.APP_NAME%></title>
   </head>
   <body>
     <div id="root"></div>
